welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:1: error: ':' expected but ')' found.
def goAndGet(i) {do {
              ^Methods:17: error: identifier expected but '}' found.
	} 
        ^